[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "derivkit"
version = "0.1.0"
description = "A lightweight Python library for quantitative finance — options pricing, Greeks, volatility tools, and risk metrics."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
